resources/css/kt-framing.css
/* ... */
#document-views .downloadbox ul li.view_details {
    background-image: url(../graphics/info.png);
}


#document-views .downloadbox ul li.download {
    background-image: url(../graphics/download.png);
}

#document-views .downloadbox ul li.checkout {
    background-image: url(../graphics/checkout.png);
}

#document-views .downloadbox ul li.checkin {
    background-image: url(../graphics/checkin.png);
}

#document-views .downloadbox ul li.cancel_checkout {
    background-image: url(../graphics/cancel_checkout.png);
}


#document-views .downloadbox ul li.edit_metadata {
    background-image: url(../graphics/edit_metadata.png);
}

#content ul {
    list-style-image: url(../graphics/bullet.png);
    padding-left: 15px;
}


/* -------------------------- general collapsable blocks ------------------------ */

.collapsible
{
    margin: 0 0 1.5em 0;
    border-width: 1px 1px 1px 1px;
    border-style: solid;
    border-color: #ccc;
    padding: 0 0 0 0;
}

.collapsible .collapsiblebody {
    padding: 0 0 0.5em 0;
}

.collapsible.expanded
{
    margin: 0 0 1.5em 0;
    border-left: 1px solid white;
    border-top: 1px solid white;
    border-right: 1px solid white;
    border-bottom: 1px solid white;
    padding: 0 0 0.5em;
}

.collapsible h4:hover {
    text-decoration: underline;
}

.collapsible h4
{
    margin: 0;
    border-width: 0 0 1px 0;
    border-style: none;
    border-color: #eee;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-left: 25px;
    background: url(../graphics/plus.gif) 10px 50% no-repeat;
    text-align: left;
    color: #333;
    font-size: small;
}


.collapsible.expanded h4
{
    margin: 0;
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #eee;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-left: 25px;
    text-align: left;
    background: url(../graphics/minus.gif) 10px 50% no-repeat;
    color: #333;
    font-size: small;
}

.collapsible .collapsiblebody {
    display: none;
}

.collapsible.expanded .collapsiblebody {
    display: block;
}



/* -------------------------- iframe browse ------------------------ */
.browse-frame {
    width: 100%;
    height: 55em;
    border-width: 0px;
    padding:0;
    margin: 0;
}

.browse_body {
    padding: 0;
}

/* -------------------------- dashboard ------------------------ */

.dashboard_block_icons
{
    position: absolute;
	top: 0px;
	right: 10px;
    text-align: right;
    margin: 0.2em 0em 0 0;
}

.dashboard_block_handle
{
    cursor: pointer;
    margin: 0.2em -0.5em 0.5em 0;
    font-size:small;
}

.dashboard_block.rolled-up .dashboard_block_body
{
    display: none;
}

.ktBlock .dashboard_block_body
{
    z-index:99;
    margin: 8px 0 10px 0;
    background-color:#FFFFFF;
    overflow: auto;
}

.ktError .dashboard_block_body
{
    z-index:99;
    margin: 0;
    background-color: #ffdd80;
    overflow: auto;
}

.ktInfo .dashboard_block_body
{
    z-index:99;
    margin: 0;
    background-color: #DEDEDE;
    overflow: auto;
}

.dashboard_block .dashboard_block_body  .edit_action
{
    z-index:99;
    background-color:#FFFFFF;
}

/* actions */

#content .dashboard_block .action
{
    padding: 1em 0.5em;
    border-bottom-width: 0px;
    background-repeat: no-repeat;
    background-position: center center;
}

#content .dashboard_block .action:hover
{
    border-bottom-width: 0px;
}

#content .dashboard_block .action_rollup
{
    background-image: url(../graphics/bullet_toggle_minus.png);
}

#content .dashboard_block.rolled-up .action_rollup
{
    background-image: url(../graphics/bullet_toggle_plus.png);
}

#content .dashboard_block .action_close
{
    background-image: url(../graphics/bullet_toggle_close.png);
}

/* action effects */
#content .dashboard_block.rolled-up h2
{
    border-bottom-width: 0px;
    padding-bottom: 10px;
}

#content .ktBlock h2
{
    border-bottom-width: 0px;
    color: #FFFFFF;
    font-size: small;
}

#content .dashboard_block.closed
{
    display: none;
}

.addDialogScreen
{
    position: absolute;
    display: block;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
/*    background-color: white;
    opacity: 0.5; */
    text-align: center;
    z-index: 1000;
}

.addDialog
{
    display: block;
    border: 1px solid #ccc;
    background-color: white;
    padding: 2em;
    margin: 10% 30%;
    opacity: 1;
    overflow: hidden;
    text-align: left;
}


.addDialog .dashletLink
{
    color: #666;
    text-decoration: none;
    display: block;
}

body #content #add_dashlet
{
    display: none;
    text-decoration: none;
    border-width: 0px;

}

#add_dashlet
{
    border: 1px solid #ccc;
    background: #fdfdfd;
    color: #333;
    font-weight: normal;
    float: right;
    margin-right: 3em;
}

.modalDiv{
	filter:alpha(opacity=80);
    -moz-opacity:0.8;
	padding-left: 30px;
	padding-top: 5px;
    width: 260px;
    height: 50px;
    background-color: #CCCCCC;
    position: absolute;
    top: 400px;
    left: 500px;
    display: block;
    z-index: 2;
}

/*contenttype_href class style is used to stop underline error on a hyperlink in IE*/
.contenttype_href
{
	margin-right: 25px;
}

.workflow_step2
{
	overflow:scroll;

}

